fix post-list p overflow and footer text

--- a/assets/scss/_postlist.scss
+++ b/assets/scss/_postlist.scss
@@ -54,5 +54,9 @@ ul.post-list {
                 }
             }
         }
+
+        p {
+            word-break: break-word;
+        }
     }
 }
